# flow

./: .gitignore  .vimrc  Cargo.toml  Untitled.ipynb  c.txt  config.toml  foo.csv  perf.data  perf.data.old  phi.txt  psi.txt  t.txt  Без названия.ipynb
src/: conentrations.rs  equtions.rs  field.rs  finit_diff.rs  finit_diff_na.rs  io.rs  main.rs
