[package]
name = "flow"
version = "0.1.0"
authors = ["che <che-email@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra="0.31.4"
ndarray = "0.15.0"
ndarray-stats = "0.5.0"

csv = "1.1"
serde =  { version = "1.0", features = ["derive"] }
toml = "0.5.2"

[profile.release]
debug = 1
[rust]
debuginfo-level = 1
